# MultiMC5

./: CMakeLists.txt  MultiMC.cpp  MultiMC.h
application/: BuildConfig.cpp.in  BuildConfig.h  CMakeLists.txt  InstancePageProvider.h  MainWindow.cpp  MainWindow.h  MultiMC.cpp  MultiMC.h
application/dialogs/: AboutDialog.cpp  AboutDialog.ui  NewInstanceDialog.cpp
application/pages/: ModFolderPage.h  VersionPage.cpp  VersionPage.h  VersionPage.ui
application/pages/global/: MinecraftPage.cpp  MultiMCPage.cpp  MultiMCPage.h
application/resources/multimc/: multimc.qrc
gui/: ConsoleWindow.cpp  MainWindow.cpp  MainWindow.h  NagUtils.cpp
gui/dialogs/: AboutDialog.cpp  AccountSelectDialog.cpp  CopyInstanceDialog.cpp  IconPickerDialog.cpp  NewInstanceDialog.cpp  VersionSelectDialog.cpp
gui/pages/: InstanceSettingsPage.h  LegacyJarModPage.cpp  LegacyUpgradePage.h  LogPage.h  ModFolderPage.cpp  ModFolderPage.h  NotesPage.h  ScreenshotsPage.h  VersionPage.cpp  VersionPage.h
gui/pages/global/: AccountListPage.cpp  JavaPage.cpp  MinecraftPage.cpp  MultiMCPage.cpp  MultiMCPage.h  MultiMCPage.ui
gui/widgets/: MCModInfoFrame.h  ServerStatus.cpp
logic/: BaseConfigObject.cpp  BaseInstaller.cpp  BaseInstance.cpp  BaseInstance.h  BaseProcess.cpp  BaseResource.h  CMakeLists.txt  CachedVersion.h  CachedVersionList.cpp  CachedVersionList.h  Env.cpp  Exception.h  FileSystem.cpp  Functional.h  InstanceFactory.cpp  InstanceList.cpp  InstanceList.h  Json.cpp  Json.h  LegacyInstance.cpp  LegacyInstance.h  LegacyUpdate.cpp  LwjglVersionList.cpp  LwjglVersionList.h  MMCJson.cpp  MMCJson.h  MetaPackage.h  MetaPackageList.cpp  MetaPackageList.h  ModList.cpp  NullInstance.h  OneSixInstance.cpp  OneSixInstance.h  OneSixUpdate.cpp  ParseUtils.cpp  ParseUtils.h  QObjectPtr.h  SkinUtils.cpp  WonkoPackageVersion.cpp  WonkoVersionList.cpp
logic/assets/: AssetsMigrateTask.cpp  AssetsUtils.cpp
logic/auth/: AccountModel.cpp  MojangAccount.cpp  MojangAccountList.cpp  YggdrasilTask.cpp
logic/auth/flows/: AuthenticateTask.cpp  RefreshTask.cpp  ValidateTask.cpp
logic/auth/yggdrasil/: MojangAccount.cpp
logic/forge/: ForgeInstaller.cpp  ForgeVersionList.cpp  ForgeXzDownload.cpp  LegacyForge.h
logic/icons/: IconList.cpp  IconList.h
logic/java/: JavaCheckerJob.cpp  JavaUtils.cpp  JavaVersionList.cpp
logic/liteloader/: LiteLoaderInstaller.cpp  LiteLoaderVersionList.cpp
logic/minecraft/: Assets.cpp  Assets.h  AssetsUtils.cpp  JarMod.cpp  LegacyInstance.cpp  LegacyUpdate.cpp  Libraries.cpp  Libraries.h  Library.cpp  Library.h  LwjglVersionList.cpp  LwjglVersionList.h  MinecraftInstance.cpp  MinecraftPatch.cpp  MinecraftPatch.h  MinecraftProfile.cpp  MinecraftProfile.h  MinecraftResources.cpp  MinecraftResources.h  MinecraftVersionList.cpp  Mod.cpp  ModList.cpp  ModList.h  NullProfileStrategy.h  OneSixInstance.cpp  OneSixInstance.h  OneSixProfileStrategy.cpp  OneSixProfileStrategy.h  OneSixRule.cpp  OneSixRule.h  OneSixUpdate.cpp  OneSixUpdate.h  Package.h  Patch.cpp  Patch.h  Process.cpp  ProfilePatch.h  ProfileStrategy.h  ProfileUtils.cpp  ProfileUtils.h  (+9 more)
logic/minecraft/onesix/: OneSixFormat.h  OneSixInstance.cpp  OneSixInstance.h  OneSixProfileStrategy.cpp  OneSixProfileStrategy.h  OneSixRead.cpp  OneSixUpdate.cpp  OneSixUpdate.h  OneSixWrite.cpp
logic/minecraft/wonko/: WonkoFormat.h  WonkoRead.cpp
logic/net/: ByteArrayDownload.cpp  CacheDownload.cpp  DownloadableResource.cpp  DownloadableResource.h  HttpMetaCache.cpp  HttpMetaCache.h  MD5EtagDownload.cpp  NetJob.cpp  NetJob.h
logic/news/: NewsChecker.cpp
logic/resources/: Resource.cpp  Resource.h  ResourceObserver.h  ResourceProxyModel.cpp  ResourceProxyModel.h
logic/settings/: SettingsObject.cpp  SettingsObject.h
logic/status/: StatusChecker.cpp
logic/tasks/: CopyFileTask.cpp  MoveFileTask.cpp  ProgressProvider.h  SequentialTask.cpp  SequentialTask.h  Task.cpp  Task.h
logic/updater/: DownloadUpdateTask.cpp  DownloadUpdateTask.h  UpdateChecker.cpp  UpdateChecker.h
logic/wonko/: BaseResource.cpp  DownloadableResource.cpp  Rules.cpp  Rules.h  WonkoPackageVersion.cpp  WonkoVersionList.cpp  WonkoVersionList.h
